# img2txt

./: .gitignore  README.md  ascii-dotter.py  main.py  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: python-publish.yml
AsciiDotter/: BrailleImage.py  BrailleSegment.py  Luminance.py
src/: asciidotter.py
src/AsciiDotter/: __main__.py
src/ascii_dotter/: __main__.py  braille_image.py  braille_segment.py  luminance.py
src/img2txt/: __init__.py  __main__.py
src/img2txt/characters/: __init__.py  braille_segment.py  brailleimage.py  braillesegment.py  colordifference.py  coloredtext.py  colors.py
src/img2txt/colors/: __init__.py  colordifference.py  coloredtext.py  colors.py
src/img2txt/methods/: __init__.py  colors.py  threshold.py
